# argonne_experience

./: README.md
misc/: vector.py
misc/file_reading/: HelloWorld.py  data  filetest.txt  test2.py
misc/profiles_so_many_profiles/: benchmark_f2_631g.161det_Ndet=8_.prof  benchmark_f2_631g.161det_Ndet=8_.txt  benchmark_f2_631g.18det_Ndet=128_.prof  benchmark_f2_631g.18det_Ndet=128_.txt  benchmark_f2_631g.18det_Ndet=16_.prof  benchmark_f2_631g.18det_Ndet=16_.txt  benchmark_f2_631g.18det_Ndet=32_.prof  benchmark_f2_631g.18det_Ndet=32_.txt  benchmark_f2_631g.18det_Ndet=64_.prof  benchmark_f2_631g.18det_Ndet=64_.txt  benchmark_f2_631g.18det_Ndet=8_.prof  benchmark_f2_631g.18det_Ndet=8_.txt  benchmark_nh3.1det_Ndet=128_.prof  benchmark_nh3.1det_Ndet=128_.txt  benchmark_nh3.1det_Ndet=16_.prof  benchmark_nh3.1det_Ndet=16_.txt  benchmark_nh3.1det_Ndet=256_.prof  benchmark_nh3.1det_Ndet=256_.txt  benchmark_nh3.1det_Ndet=32_.prof  benchmark_nh3.1det_Ndet=32_.txt  benchmark_nh3.1det_Ndet=64_.prof  benchmark_nh3.1det_Ndet=64_.txt  benchmark_nh3.1det_Ndet=8_.prof  benchmark_nh3.1det_Ndet=8_.txt  benchmark_nh3.5det_Ndet=160_.prof  benchmark_nh3.5det_Ndet=160_.txt  benchmark_nh3.5det_Ndet=20_.prof  benchmark_nh3.5det_Ndet=20_.txt  benchmark_nh3.5det_Ndet=320_.prof  benchmark_nh3.5det_Ndet=8_.txt  (+61 more)
misc/pybind_binding_python_and_cpp/first_attempt/: CMakeLists.txt  main.cpp  rectangle.py
mpi4py/: mpi_one.py  mpi_one.txt  mpi_three.py  mpi_three.txt  mpi_two.py  mpi_two.txt  mpi_two_scatter.py  mpi_two_scatter.txt  requirements.txt
profile/: basic_profiler.py  example.prof  example.txt
(+76 files in other folders)
